--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,47 @@
+set -g default-terminal "screen-256color"
+# Fix terminal name issues
+set -sg escape-time 1
+#bind-key
 set -g prefix C-a
+bind -n S-Left previous-window
+bind -n S-Right next-window
+#status
+set -g status-interval 4 # 4秒更新
+set -g status-justify centre # 至中
+set -g status-position bottom
+setw -g status-bg default #狀態透名
+# 左邊狀態
+set -g status-left-length 50
+set -g status-left "#[fg=colour111] ஃ #h.#(echo `whoami`)"
+# 右邊狀態
+set -g status-right-length 50
+set -g status-right "#[fg=colour111][#[fg=colour141]%H:%M#[fg=colour111]] "
+# Index Start
+set -g base-index 1
 
-set-option -g status "on"
 
+set-window-option -g window-status-current-attr bold
+set-window-option -g window-status-current-fg red
+#活動窗口顏色
+#setw -g window-status-current-bg default
+#setw -g window-status-current-fg default
+#框框背景色
+setw -g window-status-bg default
+setw -g window-status-fg white
+setw -g window-status-format " #I:#W#F "
+setw -g window-status-current-format " #I:#W#F "
 
+# 分割
+set -g pane-active-border-fg cyan
+set -g pane-active-border-bg default
+set -g pane-border-fg black
+set -g pane-border-bg default
+
+# Message text
+set-option -g message-bg default
+set-option -g message-fg default
+
+set -g mode-keys vi
+#set -g mode-mouse on
+#set -g mouse-select-pane on
+#set -g mouse-select-window on
