--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,27 +19,28 @@ set -g status-right "#[fg=colour111][#[fg=colour141]%H:%M#[fg=colour111]] "
 # Index Start
 set -g base-index 1
 
-
-set-window-option -g window-status-current-attr bold
-set-window-option -g window-status-current-fg red
+set-window-option -g window-status-current-style bold
+#set-window-option -g window-status-current-attr bold
+set-window-option -g window-status-current-style fg=red
+#set-window-option -g window-status-current-fg red
 #活動窗口顏色
 #setw -g window-status-current-bg default
 #setw -g window-status-current-fg default
 #框框背景色
-setw -g window-status-bg default
-setw -g window-status-fg white
+setw -g window-status-style bg=default
+setw -g window-status-style fg=white
 setw -g window-status-format " #I:#W#F "
 setw -g window-status-current-format " #I:#W#F "
 
 # 分割
-set -g pane-active-border-fg cyan
-set -g pane-active-border-bg default
-set -g pane-border-fg black
-set -g pane-border-bg default
+set -g pane-active-border-style fg=cyan
+set -g pane-active-border-style bg=default
+set -g pane-border-style fg=black
+set -g pane-border-style bg=default
 
 # Message text
-set-option -g message-bg default
-set-option -g message-fg default
+set-option -g message-style bg=default
+set-option -g message-style fg=default
 
 set -g mode-keys vi
 #set -g mode-mouse on
